testsuite/testcases/syntaxnull/null-flex.output
Reading "testcases/syntaxnull/null.flex"

Error in file "testcases/syntaxnull/null.flex" (line 9): 
Syntax error.
}
^
1 error, 0 warnings.
